[gd_scene load_steps=2 format=3 uid="uid://by00ltlk7w8ib"]

[ext_resource type="Script" uid="uid://dto7ynkl0m3s6" path="res://scenes/ui/interactive_summary_panel.gd" id="1_7n5nl"]

[node name="InteractiveSummaryPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7n5nl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="KingdomList" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/KingdomList"]
layout_mode = 2
text = "World"

[node name="CriticalEventsButton" type="Button" parent="MarginContainer/HBoxContainer/KingdomList"]
unique_name_in_owner = true
layout_mode = 2
text = "Critical events"

[node name="ListTitle" type="Label" parent="MarginContainer/HBoxContainer/KingdomList"]
layout_mode = 2
text = "Kingdoms"

[node name="KingdomScroll" type="ScrollContainer" parent="MarginContainer/HBoxContainer/KingdomList"]
layout_mode = 2
size_flags_vertical = 3

[node name="KingdomButtonContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/KingdomList/KingdomScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/KingdomList/KingdomScroll/KingdomButtonContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3
text = "Test"

[node name="ContinueButton" type="Button" parent="MarginContainer/HBoxContainer/KingdomList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 8
text = "Continue to Next Season"

[node name="DetailsPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DetailsPanel/MarginContainer"]
layout_mode = 2

[node name="DetailsTitle" type="Label" parent="MarginContainer/HBoxContainer/DetailsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DetailsScroll" type="ScrollContainer" parent="MarginContainer/HBoxContainer/DetailsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="DetailsText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DetailsPanel/MarginContainer/VBoxContainer/DetailsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionButtonsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/DetailsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
